Harden chroot cleanup and no-root onboarding
Improves safety around chroot uninstall/install by unmounting legacy/current sdcard binds, sweeping leftover mounts, and blocking recursive deletes while any mount remains under the chroot. Also makes install prep fail fast when detach fails, updates unmount detection to use /proc/mounts, and clarifies tar failure messaging when su is unavailable. In intro checks, users without root are now guided to switch to the rootless engine when supported, or clearly blocked when it is not